Hotkey preferences: impossible to save a deleted "global" hotkey definitions
in the "configure hotkeys" panel, I can press "del" on a specific hotkey, it will be gone, and my change will be saved. If I have a "global" hotkey definition and want to delete it, it is not possible. I can delete it in the screen, but when I hit "save", the deletion will not be saved - next time I open the screen, the definition is still there.
Edited by Jean-Baptiste Kempf