Qt: hotkeys: always overwrite global hotkeys (fix #7932)